# mkscript

./: Cargo.toml  default.nix
.reuse/: dep5
src/: main.rs  template_cli.rs  template_shell.rs
